# solar-om-analytics

./: .eslintrc.json  .flake8  .gitignore  Solar_Fleet_Performance_Monitoring_Report.ipynb  index.html  jest.config.cjs  jest.config.js  package.json  playwright.config.ts  pyproject.toml  setup.py  tsconfig.json  vite.config.ts
data/: plant_details.csv
e2e/: patterns.spec.ts
src/logic/: __init__.py
src/logic/analytics/: __init__.py  anomaly_detector.py  baseline_calculator.py  data_pipeline.py  data_validator.py  insights_engine.py  pattern_detector.py
src/logic/api/: __init__.py  main.py  models.py
src/logic/api/middleware/: __init__.py
src/logic/api/routes/: __init__.py
src/logic/data_models/: __init__.py  anomaly.py  baseline.py  health_score.py  insight.py  pattern.py  plant.py  reading.py
src/logic/ingestion/: __init__.py  csv_loader.py
src/logic/services/: __init__.py
src/logic/utils/: __init__.py  constants.py  logging.py
src/ui/: App.tsx  main.tsx
src/ui/components/: AnomalyList.test.tsx  AnomalyList.tsx  InsightsList.tsx  PatternList.test.tsx  PatternList.tsx  insights-list.css  pattern-list.css
src/ui/components/__tests__/: PatternList.integration.test.tsx  PatternList.test.tsx
src/ui/styles/: anomaly-list.css  main.css
test/: conftest.py
test/e2e/: anomaly-detection.spec.ts  insights-list.spec.ts
test/logic/: __init__.py
test/logic/contract/: __init__.py
test/logic/fixtures/: __init__.py  conftest.py  sample_plants.csv  sample_readings.csv
test/logic/integration/: __init__.py  test_phase3_pipeline.py
test/logic/unit/: __init__.py  test_anomalies_api.py  test_anomaly_detector.py  test_api_coverage.py  test_baseline_calculator.py  test_csv_loader.py  test_data_pipeline.py  test_data_validator.py  test_insights_api.py  test_insights_engine.py  test_pattern_detector.py  test_patterns_api.py
test/ui/: integration.test.tsx
test/ui/components/: AnomalyList.simple.test.tsx  InsightsList.integration.simple.test.tsx  InsightsList.simple.test.tsx  PatternList.simple.test.tsx
